--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="./style.css">
     <title>Ejercicio 10 - Gonzalo Gonzalez</title>
 </head>
-<body class="bg-dark text-bg-dark">    
+<body>    
     <main>
         <h1>JS Avanzado y JQuery</h1> 
-        <section class="container-fluid">     
-            <div class="col-xs-12">
+        <section class="container">     
+            <div class="col">
                 <div>
                     <label for="selector">Seleccione número de ejercicio: </label>        
                     <select class="form-select-sm" name="select" id="selector">
