--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>    
     <main>
         <h1>JS Avanzado y JQuery</h1> 
-        <section class="container">     
+        <section class="container">    
             <div class="col">
+                <h1>hola mundo</h1>
                 <div>
                     <label for="selector">Seleccione número de ejercicio: </label>        
                     <select class="form-select-sm" name="select" id="selector">
@@ -46,7 +47,8 @@
                 <button class="btn btn-danger" onclick="reset()" id="btn-reset" disabled>Reiniciar</button>        
             </div>
             <div class="col-xs-6" id="enunciado"></div>
-        </section>        
+        </section>
+
         <div class="col-xs-6" id="app">
         </div>
     </main>    
