--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <option value=24>24</option>                        
                     </select>
                 </div>
-                <button class="btn btn-primary" onclick="selector()" id="btn-ejecutar">Seleccionar</button>        
+                <button class="btn btn-primary" onclick="selectorEjercicio()" id="btn-ejecutar">Seleccionar</button>        
                 <button class="btn btn-danger" onclick="reset()" id="btn-reset" disabled>Reiniciar</button>        
             </div>
             <div class="col-xs-6" id="enunciado"></div>
